Added back 404 (deleted) and brightened primary color

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 // COLORS (clr)
 ////////////////////////////////////////////////////////
 
-@prime: #D1232A;
+@prime: #EA232A;
 @lgrey: #f7f7f7;
 @dgrey: #444;
 @grey-dark: #444;
