--- a/src/less/slider.module.less
+++ b/src/less/slider.module.less
@@ -1,7 +1,7 @@
 @import (reference) 'global.less';
 
 .slider {
-  .h(70rem); .mh(100vh); .w; .of(hidden);
+  .h(70rem); .mh(100vh); .w; .of(visible);
 }
 
 
