Fixed Button Internal Link bug
Switched Button internal link to plain text, because multiple Contentful content types didn't play nicely with graphql.

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 // COLORS (clr)
 ////////////////////////////////////////////////////////
 
-@prime: #EA232A;
+@prime: #cc331f;
 @lgrey: #f7f7f7;
 @dgrey: #444;
 @grey-dark: #444;
