Mobile menu and hero fixes
~ Reduced hero-secondary mobile height
~ Reduced mobile menu spacing

--- a/src/less/menu-main-mobile.module.less
+++ b/src/less/menu-main-mobile.module.less
@@ -15,8 +15,8 @@
 }
 
 .menuItem {
-  .w; .pad(@s @s * 1.5); .fw(500); .fs(3rem); .cur(pointer);
-  .dsp(flex); .aic; .jcsb;
+  .w; .pad(.3em @s); .fw(500); .fs(3rem); .cur(pointer);
+  .dsp(flex); .aic; .jcsb; .lh(1.2em);
 
   &:hover {
     .bg(darken(@prime,5%));
