Added grid-gap to mobile food items

--- a/src/less/archive-foodCategory.module.less
+++ b/src/less/archive-foodCategory.module.less
@@ -23,7 +23,7 @@
 
 .grid {
   .dsp(grid); .gtc(repeat(auto-fill,minmax(25rem,1fr)));
-  .gg(@ml @m);
+  .gg(@ml @m); grid-gap: @ml @m;
 }
 
 .foodItem {
